update the buildout to use current version of testing: plonetest/test-3.x.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,39 +1,13 @@
 [buildout]
-parts =
-   instance
-   
-extends = http://dist.plone.org/release/3.3rc2/versions.cfg
-versions = versions    
-newest = false    
-find-links =
-   http://dist.plone.org
-   http://download.zope.org/ppix/
-   http://download.zope.org/distribution/
-   http://effbot.org/downloads
+extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-3.x.cfg
+#extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+versions = versions
+package-name = Products.CompoundField
+#test-eggs = PIL
 
-develop = 
-    .
-   
-[zope2]
-recipe = plone.recipe.zope2install
-url = ${versions:zope2-url}
-fake-zope-eggs = true
-additional-fake-eggs =
-   ZConfig
-   pytz
-      
-[instance]    
-recipe = plone.recipe.zope2instance
-zope2-location = ${zope2:location}   
-user = admin:admin
-http-address = 8080
-debug-mode = on
-verbose-security = off
-deprecation-warnings = off
-eggs =
-    Plone
-    Products.CompoundField
-    Products.DocFinderTab
-    plone.reload
-    
-    
+[instance]
+#eggs+=PIL
+
+[versions]
+Products.PrintingMailHost = 0.7
+
